OLD-YAML-12SEP/johncollins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: johncollins-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: johncollins-service
            port:
              number: 8080
      - path: /foo
        pathType: Exact
        backend:
          service:
            name: foo-service
            port:
              number: 8081
